# comp1110-c16

./: README.md
backend/: Config.cs  Controller.cs  Program.cs  View.cs  comp1110_backend.csproj  comp1110_backend.sln  network.json
backend/Model/: ModelUtility.cs  Segment.cs  Stop.cs  TransportNetwork.cs
backend/Model/Responses/: Route.cs
backend/Properties/: launchSettings.json
backend/Services/: PathFindingService.cs
frontend/: .gitignore  README.md  pyproject.toml  run_mac.sh  run_windows.bat
frontend/scripts/: setup.bat  setup.sh
frontend/src/: config.py  main.py  models.py  utils.py
frontend/src/controller/: __init__.py  fare_controller.py  network_controller.py  network_crawl_controller.py  route_controller.py
frontend/src/controller/fare_provider/: __init__.py  base_fare.py  bus_fare.py  bus_fares.json  mtr_fare.py  tram_fare.py
frontend/src/controller/route_provider/: __init__.py  base_crawler.py  bus_crawler.py  mtr_crawler.py  tram_crawler.py
frontend/src/views/: __init__.py  base_view.py  navigator.py  route_ranking_page.py  routing_page.py
frontend/src/views/components/: __init__.py  network_view.py  route_card.py
frontend/tests/: test_models.py  test_mtr_controller.py  test_route_controller.py  test_utils.py
